Adiciona hover aos links

--- a/style/header.css
+++ b/style/header.css
@@ -29,10 +29,16 @@ nav {
 
 .list-links {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .list-links li {
-  padding: 16px 16px;
+  padding: 16px 56px;
+}
+
+.list-links li:hover {
+  background-color: var(--background-third-color-hover);
 }
 
 .list-links li a {
