--- a/style/global.css
+++ b/style/global.css
@@ -9,6 +9,7 @@
   --background-main-color: #ffffff;
   --background-second-color: #f5f5f5;
   --background-third-color: #000000;
+  --background-third-color-hover: #222222;
 
   --red-main-color: #8f0101;
   --red-second-color: #b81515;
