--- a/style/header.css
+++ b/style/header.css
@@ -44,4 +44,26 @@ nav {
 .list-links li a {
   color: var(--text-second-color);
   text-decoration: none;
+  font-weight: var(--menu-text-weight);
+  font-size: 24px;
+}
+
+@media screen and (min-width: 768px) {
+  .navigation-menu {
+    margin-top: 0;
+  }
+  .navigation-menu label {
+    display: none;
+  }
+  .navigation-menu nav {
+    display: block;
+  }
+  .navigation-menu ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .list-links li {
+    padding: 16px 20px;
+  }
 }
