--- a/style/header.css
+++ b/style/header.css
@@ -4,7 +4,7 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 37px 48px;
+  padding: 37px 8%;
   position: relative;
 }
 
@@ -12,6 +12,14 @@ header {
   display: inline-block;
   width: 68px;
   height: 64px;
+}
+
+.img-mobile {
+  display: block;
+}
+
+.img-desktop {
+  display: none;
 }
 
 input[type="checkbox"]:checked ~ nav {
@@ -65,5 +73,26 @@ nav {
   }
   .list-links li {
     padding: 16px 20px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .logo {
+    width: 260px;
+    height: 64px;
+  }
+  .img-mobile {
+    display: none;
+  }
+  .img-desktop {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  .navigation-menu a:hover {
+    color: var(--red-main-color);
+  }
+  .list-links li:hover {
+    background-color: var(--background-third-color);
   }
 }
