--- a/style/hero.css
+++ b/style/hero.css
@@ -5,11 +5,24 @@
   background-size: cover;
 }
 
+.hero h2 {
+  padding: 88px 24px;
+  margin: 0;
+  font-weight: var(--text-weight);
+  font-size: 1.25em;
+  text-align: center;
+  line-height: 1.5;
+}
+
 @media screen and (min-width: 768px) {
   .hero-img {
     height: 620px;
     background: url(../assets/hero-tablet.jpg) no-repeat;
     background-size: cover;
+  }
+  .hero h2 {
+    padding: 88px 60px;
+    font-size: 2em;
   }
 }
 
@@ -17,5 +30,8 @@
   .hero-img {
     background: url(../assets/hero-desktop.jpg) no-repeat;
     background-size: cover;
+  }
+  .hero h2 {
+    padding: 104px 120px;
   }
 }
