--- a/style/hero.css
+++ b/style/hero.css
@@ -9,7 +9,7 @@
   padding: 88px 24px;
   margin: 0;
   font-weight: var(--text-weight);
-  font-size: 1.25em;
+  font-size: 1.25rem;
   text-align: center;
   line-height: 1.5;
 }
@@ -22,7 +22,7 @@
   }
   .hero h2 {
     padding: 88px 60px;
-    font-size: 2em;
+    font-size: 2rem;
   }
 }
 
