--- a/style/global.css
+++ b/style/global.css
@@ -71,6 +71,10 @@ body {
   border-radius: 16px;
 }
 
+section {
+  padding-bottom: 88px;
+}
+
 @media screen and (min-width: 768px) {
   .section-title h2 {
     font-size: 2em;
