--- a/style/hero.css
+++ b/style/hero.css
@@ -6,7 +6,7 @@
 }
 
 .hero h2 {
-  padding: 88px 24px;
+  padding: 88px 24px 0px;
   margin: 0;
   font-weight: var(--text-weight);
   font-size: 1.25rem;
