--- a/style/destinations.css
+++ b/style/destinations.css
@@ -54,5 +54,73 @@
 }
 
 .destinations .button {
-  display: inline-block;
+  width: 312px;
+}
+
+@media screen and (min-width: 768px) {
+  .destinations {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  .item {
+    align-items: normal;
+  }
+
+  .destinations .img-item {
+    width: 648px;
+    height: 453px;
+  }
+
+  .destinations .tokyo {
+    background: url(../assets/tokyo-tablet-desk.jpg) no-repeat;
+  }
+
+  .destinations .osaka {
+    background: url(../assets/osaka-tablet-desk.jpg) no-repeat;
+  }
+
+  .destinations .item p {
+    width: 648px;
+  }
+
+  .destinations .button {
+    width: 280px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .destinations {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .destinations-items {
+    width: 648px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .destinations {
+    padding-left: 120px;
+    padding-right: 120px;
+    align-items: normal;
+  }
+
+  .destinations-items {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+    width: 588px;
+  }
+
+  .destinations .img-item {
+    width: 588px;
+    height: 453px;
+  }
+
+  .destinations .item p {
+    width: 588px;
+  }
 }
