--- a/style/destinations.css
+++ b/style/destinations.css
@@ -1,19 +1,21 @@
 .destinations {
   padding-left: 24px;
   padding-right: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .destinations-items {
   display: flex;
   flex-direction: column;
+  width: 312px;
   gap: 40px;
 }
 
 .item {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
   gap: 24px;
 }
 
@@ -49,12 +51,13 @@
   font-size: 1.25rem;
   font-weight: var(--text-weight);
   text-align: left;
-  width: 312px;
+  width: 100%;
   line-height: 32px;
 }
 
 .destinations .button {
-  width: 312px;
+  width: 100%;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -63,8 +66,8 @@
     padding-right: 60px;
   }
 
-  .item {
-    align-items: normal;
+  .destinations-items {
+    width: 648px;
   }
 
   .destinations .img-item {
@@ -80,24 +83,8 @@
     background: url(../assets/osaka-tablet-desk.jpg) no-repeat;
   }
 
-  .destinations .item p {
-    width: 648px;
-  }
-
   .destinations .button {
     width: 280px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .destinations {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .destinations-items {
-    width: 648px;
   }
 }
 
@@ -109,7 +96,6 @@
   }
 
   .destinations-items {
-    display: flex;
     flex-direction: row;
     gap: 24px;
     width: 588px;
@@ -118,9 +104,5 @@
   .destinations .img-item {
     width: 588px;
     height: 453px;
-  }
-
-  .destinations .item p {
-    width: 588px;
   }
 }
