--- a/style/footer.css
+++ b/style/footer.css
@@ -1,11 +1,50 @@
 .footer {
   padding: 32px 24px;
   background-color: var(--background-third-color);
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
 }
 
 .footer header {
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.footer header div {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.footer p {
+  color: var(--background-second-color);
+  font-size: 1rem;
+  line-height: 28px;
+  text-align: center;
 }
 
 .footer__logo {
+  width: 162px;
+}
+
+.footer footer {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 165px;
+  margin: 0 auto;
+}
+
+.redes-sociais {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+}
+
+.redes-socias-img {
+  width: 32px;
+  height: 32px;
 }
