--- a/style/footer.css
+++ b/style/footer.css
@@ -48,3 +48,36 @@
   width: 32px;
   height: 32px;
 }
+
+@media screen and (min-width: 768px) {
+  .footer {
+    padding: 32px 60px;
+    justify-content: space-between;
+    gap: 0px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .footer {
+    padding: 32px 60px;
+    flex-direction: row;
+  }
+
+  .footer header {
+    align-items: flex-start;
+  }
+
+  .footer p {
+    text-align: left;
+  }
+
+  .footer footer {
+    margin: auto 0;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .footer {
+    padding: 52px 120px;
+  }
+}
