--- a/style/payments.css
+++ b/style/payments.css
@@ -35,10 +35,44 @@
   height: 182px;
 }
 
+.img1 {
+  grid-area: "bag";
+  background: url(../assets/img1-pacotes-mobile.png);
+  height: 254px;
+}
+.img2 {
+  grid-area: "passport";
+  background: url(../assets/img2-pacotes-mobile.png);
+  height: 254px;
+}
+.img3 {
+  grid-column: 1/3;
+  background: url(../assets/img3-pacotes-mobile.png);
+  height: 182px;
+}
+
 .image {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+.pacotes-preco {
+  margin: 32px 0px 24px;
+  font-weight: var(--title-weight);
+  font-size: 2.5rem;
+}
+
+.pacotes-parcelas {
+  margin: 0px 0px 24px;
+  font-weight: var(--title-weight);
+  font-size: 1.75rem;
+}
+
+.payments .button {
+  width: 100%;
+  text-align: center;
+  margin-top: 24px;
 }
 
 @media screen and (min-width: 768px) {
